# news-scraper-bot

./: .gitignore  .pre-commit-config.yaml  README.md  conda.yaml  local_run.py  pyproject.toml  requirements.txt  robot.yaml
devdata/work-items-in/first-input/: work-items.json
src/: main.py  news_scraper_bot.py
tests/: test_news_scraper_bot.py
