[tool.poetry]
name = "news-scraper-bot"
version = "0.1.0"
description = "Automating the process of extracting data from a news site"
authors = ["Filipe Marchesini <filipe.marchesini@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rpaframework = "^28.6.2"
openpyxl = "^3.1.5"
trio = "^0.26.2"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"
taskipy = "^1.13.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
pytest-trio = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv"]
skip_glob = [".venv/**"]

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'

[tool.ruff]
line-length = 79
extend-exclude = ['.venv']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
